# data-agent

./: .env.example  .gitignore  README.md  pyproject.toml  sources.yaml
.github/workflows/: ci.yml
data/: sample_metrics.csv
src/data_agent/: __init__.py  agent.py  api.py  config.py  dependencies.py  exceptions.py  log.py  middleware.py  models.py  registry.py
src/data_agent/charts/: __init__.py  engine.py
src/data_agent/sources/: __init__.py  api_source.py  base.py  csv_source.py  sql_source.py
src/data_agent/tools/: __init__.py  chart.py  fetch.py  transform.py
tests/: conftest.py  test_phase0.py  test_phase1.py  test_phase1_bugs.py  test_phase2.py  test_phase2_architecture.py  test_phase3.py  test_phase3_error_handling.py  test_phase4.py  test_phase5.py  test_phase6_integration.py
